[tool.poetry]
name = "everynyan-moderation-service"
version = "0.1.0"
description = ""
authors = ["Shravan Asati <dev.shravan@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
textblob = "^0.18.0.post0"
transformers = "^4.44.2"
httpx = "^0.27.2"


[tool.poetry.group.test.dependencies]
pandas = "^2.2.3"
pytest = "^8.3.3"
pytest-check = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
